--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="DanceStudioExceptionType.h" />
     <ClInclude Include="FileHelper.h" />
     <ClInclude Include="MathHelper.h" />
+    <ClInclude Include="Matrix3x3.h" />
     <ClInclude Include="OpenGL.h" />
     <ClInclude Include="OpenGLExtensions.h" />
     <ClInclude Include="OpenGLRenderer.h" />
@@ -174,11 +175,13 @@
     <ClCompile Include="FileHelper.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="MathHelper.cpp" />
+    <ClCompile Include="Matrix3x3.cpp" />
     <ClCompile Include="OpenGLExtensions.cpp" />
     <ClCompile Include="OpenGLRenderer.cpp" />
     <ClCompile Include="PathHelper.cpp" />
     <ClCompile Include="StepChartEditor.cpp" />
     <ClCompile Include="Throw.cpp" />
+    <ClCompile Include="Vector3d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PixelShader.ps">
